--- a/ProcessLib/LIE/Common/CMakeLists.txt
+++ b/ProcessLib/LIE/Common/CMakeLists.txt
@@ -4,4 +4,4 @@ add_library(LIECommon ${SOURCES})
 if(BUILD_SHARED_LIBS)
     install(TARGETS LIECommon LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 endif()
-target_link_libraries(LIECommon PUBLIC MeshLib)
+target_link_libraries(LIECommon PUBLIC MeshLib MaterialLib)
