[cmake] add link to matlib in processes

--- a/ProcessLib/ThermalTwoPhaseFlowWithPP/CMakeLists.txt
+++ b/ProcessLib/ThermalTwoPhaseFlowWithPP/CMakeLists.txt
@@ -5,7 +5,7 @@ if(BUILD_SHARED_LIBS)
     install(TARGETS ThermalTwoPhaseFlowWithPP LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 endif()
 target_link_libraries(ThermalTwoPhaseFlowWithPP
-    PUBLIC ProcessLib
+    PUBLIC ProcessLib MaterialLib
     PRIVATE ParameterLib
 )
 
