--- a/ProcessLib/LIE/CMakeLists.txt
+++ b/ProcessLib/LIE/CMakeLists.txt
@@ -5,6 +5,8 @@ APPEND_SOURCE_FILES(SOURCES SmallDeformation)
 APPEND_SOURCE_FILES(SOURCES SmallDeformation/LocalAssembler)
 APPEND_SOURCE_FILES(SOURCES ThermoHydroMechanics)
 APPEND_SOURCE_FILES(SOURCES ThermoHydroMechanics/LocalAssembler)
+APPEND_SOURCE_FILES(SOURCES TH)
+APPEND_SOURCE_FILES(SOURCES TH/LocalAssembler)
 
 add_library(LIE ${SOURCES})
 if(BUILD_SHARED_LIBS)
@@ -18,3 +20,4 @@ target_link_libraries(LIE
 include(HydroMechanics/Tests.cmake)
 include(SmallDeformation/Tests.cmake)
 include(ThermoHydroMechanics/Tests.cmake)
+include(TH/Tests.cmake)
